create_graphs/compile_fred2_56800.err
  File "create_fred.py", line 841
    master_clean['edges2contract']t['type']=[]
                                  ^
SyntaxError: invalid syntax

real	0m0.219s
user	0m0.024s
sys	0m0.032s
  File "create_fred.py", line 841
    master_clean['edges2contract']t['type']=[]
                                  ^
SyntaxError: invalid syntax

real	0m0.119s
user	0m0.032s
sys	0m0.024s
  File "create_fred.py", line 841
    master_clean['edges2contract']t['type']=[]
                                  ^
SyntaxError: invalid syntax

real	0m0.125s
user	0m0.020s
sys	0m0.040s

real	3m36.590s
user	0m56.600s
sys	0m9.088s

real	1m59.446s
user	0m1.840s
sys	0m1.240s
